[Portal.Theme] CSS fix in plone navigation and content-area alignment ; Updated workspace font theme colors

--- a/portal.theme/trunk/portal/theme/static/css/skin.css
+++ b/portal.theme/trunk/portal/theme/static/css/skin.css
@@ -476,6 +476,12 @@ div#portal-globalnav ul.level0 li a {
     font-family: Arial, Helvetica, sans-serif;    
     color:#fff;
 }
+.site-plone div#portal-globalnav .selected {
+    background-color:#016d9a;
+}
+.site-plone div#portal-globalnav .selected a {
+    text-decoration:underline;
+}
 div#portal-globalnav ul.level0 li.selected a {
     font-weight: bold;
     border-bottom-color: transparent;
@@ -502,7 +508,7 @@ div#portal-globalnav ul.level0 li#lower-hse,
 div#portal-globalnav ul.level0 li#lower-hse a{    
     background: #f79f10 !important;	
     border: 0px; 
-} 
+}
 
 div#portal-globalnav ul li#lower-hse a,
 div#portal-globalnav ul li#upper-hse a {
@@ -1081,15 +1087,17 @@ span.yui-button.yui-link-button span a {
 }
 .template-workspace.section-bungeni-workspace div#portal-globalnav ul.level1,
 .template-workspace.section-bungeni-admin div#portal-globalnav ul.level1 {
-    background: #9c9c9c;
+    background: #acacac;
 }
 .template-workspace div#portal-globalnav li#portaltab-admin-content,
 .template-workspace div#portal-globalnav li#portaltab-admin-content a,
 .template-workspace div#portal-globalnav li#portaltab-admin-content a:hover,
 .template-workspace div#portal-globalnav li#portaltab-,
 .template-workspace div#portal-globalnav li#portaltab- a,
-.template-workspace div#portal-globalnav li#portaltab- a:hover {
-    background: #9c9c9c !important;
+.template-workspace div#portal-globalnav li#portaltab- a:hover,
+.section-bungeni-workspace div#portal-globalnav ul.level1 li a {
+    background: #acacac !important;
+    color:#000000 !important;
 }
 
 .template-workspace  div#portal-globalnav ul.level0 {
@@ -1123,6 +1131,10 @@ span.yui-button.yui-link-button span a {
 .template-workspace.section-bungeni-workspace div.main-column h2 {
     font-weight: bold !important;
     color: #222 !important;
+}
+.template-workspace.section-bungeni-workspace div.main-column .yui-layout-hd h2 {
+    color: #ffffff !important;
+    text-shadow:none;
 }
 
 .template-workspace.section-bungeni-admin div.main-column h2,
@@ -1469,7 +1481,6 @@ span.yui-button.yui-link-button span a {
 }
 .template-workspace #top-layer {
     border: 0 none;
-    border-bottom: 1px solid #4d4d4d;
     background: transparent;
 }
 /* modifies the dhx_cal object */
